tests/macros/confirm/page_size.stderr
error: option `page_size` does not exist for kind `confirm`
 --> $DIR/page_size.rs:2:39
  |
2 |     inquisition::questions![Confirm { page_size: todo!() }];
  |                                       ^^^^^^^^^
