tests/macros/confirm/page_size.rs
fn main() {
    inquisition::questions![Confirm { page_size: todo!() }];
}
